Changed one comment lol.

--- a/python_projects/print_function_exploration/print_function_exploration.ipynb
+++ b/python_projects/print_function_exploration/print_function_exploration.ipynb
@@ -58,7 +58,7 @@
     "# 3. Inputting a hyphen (-) as the separator will separate all objects with a hyphen (\"Hello-,-World-!\").\n",
     "print(\"Hello\", \",\", \"World\", \"!\", sep = \"-\")\n",
     "\n",
-    "# Perhaps this is more practical here.\n",
+    "# Perhaps this is more practical.\n",
     "print(\"04\", \"03\", \"1958\", sep = \"-\")\n",
     "print(\"04\", \"03\", \"1958\", sep = \"/\")"
    ]
